--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -41,6 +41,10 @@
   name = "github.com/jessevdk/go-flags"
   version = "1.3.0"
 
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.13.37"
+
 [prune]
   go-tests = true
   unused-packages = true
