--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,11 @@ jobs:
     docker:
       - image: circleci/golang:latest
     working_directory: /go/src/github.com/honeycombio/honeyaws
-    steps: &steps
+	steps: &steps
+      # Install fpm for deb/rpm package building
+      - run: sudo apt-get -qq update
+      - run: sudo apt-get install -y build-essential rpm
+      - run: gem install fpm
       # Our build steps: we checkout the repo, fetch our deps, lint, and finally
       # run "go test" on the package.
       - checkout
