skip building and testing deb / rpm packages

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
     working_directory: /go/src/github.com/honeycombio/honeyaws
     steps: &steps
       # Install fpm for deb/rpm package building
-      - run: sudo apt-get -qq update
-      - run: sudo apt-get install -y build-essential rpm
-      - run: gem install fpm
+    #   - run: sudo apt-get -qq update
+    #   - run: sudo apt-get install -y build-essential rpm
+    #   - run: gem install fpm
       # Our build steps: we checkout the repo, fetch our deps, lint, and finally
       # run "go test" on the package.
       - checkout
@@ -43,10 +43,10 @@ jobs:
             fi
       - run: go test -v -race ./...
       # Build binary and packages
-      - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t deb
-      - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t rpm
+    #   - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t deb
+    #   - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t rpm
       # Check that packages install
-      - run: pkg-test/test.sh "1.${CIRCLE_BUILD_NUM}"
+    #   - run: pkg-test/test.sh "1.${CIRCLE_BUILD_NUM}"
 
   "latest":
     <<: *test
