--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     steps: &steps
       # Install fpm for deb/rpm package building
       - run: sudo apt-get -qq update
-      - run: sudo apt-get install -y build-essential rpm ruby
+      - run: sudo apt-get install -y build-essential rpm ruby-dev
       - run: sudo gem install fpm
       # Our build steps: we checkout the repo, fetch our deps, lint, and finally
       # run "go test" on the package.
