add support for creating docker images

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
               go vet -v ./...
             fi
       - run: go test -v -race ./...
+	  # Enable docker support
+	  - setup_remote_docker
       # Build binary and packages
       - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t deb
       - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t rpm
