--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,80 +1,101 @@
-version: 2.0
+version: 2.1
+
+orbs:
+  aws-cli: circleci/aws-cli@0.1.13
+  docker: circleci/docker@1.3.0
 
 jobs:
-  # Base test configuration for Go library tests Each distinct version should
-  # inherit this base, and override (at least) the container image used.
-  "test": &test
-    docker:
-      - image: circleci/golang:latest
-    working_directory: /go/src/github.com/honeycombio/honeyaws
-    steps: &steps
-      # Install fpm for deb/rpm package building
-      - run: sudo apt-get -qq update
-      - run: sudo apt-get install -y build-essential rpm ruby ruby-dev
-      - run: sudo gem install fpm
-      # Our build steps: we checkout the repo, fetch our deps, lint, and finally
-      # run "go test" on the package.
-      - checkout
-      # Logs the version in our build logs, for posterity
-      - run: go version
-      - run:
-          name: "Fetch dependencies"
-          command: >
-            go get -t -v ./...
-      # Only run gofmt, vet & lint against the latest Go version
-      - run:
-          name: "Run golint"
-          command: >
-            if [ "${LATEST}" = true ] && [ -z "${SKIP_GOLINT}" ]; then
-              go get -u golang.org/x/lint/golint
-              golint ./...
-            fi
-      - run:
-          name: "Run gofmt"
-          command: >
-            if [[ "${LATEST}" = true ]]; then
-              diff -u <(echo -n) <(gofmt -d -e .)
-            fi
-      - run:
-          name: "Run go vet"
-          command:  >
-            if [[ "${LATEST}" = true ]]; then
-              go vet -v ./...
-            fi
-      - run: go test -v -race ./...
-      # Enable docker support
-      - setup_remote_docker
-      # Build binary and packages
-      - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t deb
-      - run: ./build-pkg.sh -v "1.${CIRCLE_BUILD_NUM}" -t rpm
-      # Check that packages install
-      - run: pkg-test/test.sh "1.${CIRCLE_BUILD_NUM}"
-
-  "latest":
-    <<: *test
-    environment:
-      LATEST: true
-
-  "1.14":
-    <<: *test
-    docker:
-      - image: circleci/golang:1.14
-
-  "1.13":
-    <<: *test
+  build:
     docker:
       - image: circleci/golang:1.13
+    steps:
+      - checkout
+      - run: go test --timeout 10s -v ./...
+      - run: go install -ldflags "-X main.BuildID=1.${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
+      - setup_remote_docker
+      - run:
+          name: apt_get_update
+          command: sudo apt-get -qq update
+      - run:
+          name: apt_get_install
+          command: sudo apt-get install -y build-essential rpm ruby ruby-dev
+      - run:
+          name: gem_install
+          command: sudo gem install fpm
+      - run: mkdir -p ~/artifacts
+      - run:
+          name: build_deb
+          command: ./build-pkg.sh -v "1.${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws_1.${CIRCLE_TAG}_amd64.deb ~/artifacts
+      - run:
+          name: build_rpm
+          command: ./build-pkg.sh -v "1.${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-1.${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
+      - run: pkg-test/test.sh "1.${CIRCLE_TAG}"
+      - run: echo "finished builds" && find ~/artifacts -ls
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - artifacts
+      - store_artifacts:
+          path: ~/artifacts
 
-  "1.12":
-    <<: *test
+  publish_github:
     docker:
-      - image: circleci/golang:1.12
+      - image: cibuilds/github:0.13.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: "Publish Release on GitHub"
+          command: |
+            echo "about to publish to tag ${CIRCLE_TAG}"
+            ls -l ~/artifacts/*
+            ghr -draft -n ${CIRCLE_TAG} -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${CIRCLE_TAG} ~/artifacts
+
+  publish_s3:
+    executor: aws-cli/default
+    steps:
+      - attach_workspace:
+          at: ~/
+      - aws-cli/install
+      - aws-cli/configure:
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+      - run:
+          name: sync_s3_artifacts
+          command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/${CIRCLE_TAG}/
 
 workflows:
   version: 2
   build:
     jobs:
-      - "latest"
-      - "1.14"
-      - "1.13"
-      - "1.12"
+      - build
+      - publish_github:
+          context: Honeycomb Secrets
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - publish_s3:
+          context: Honeycomb Secrets
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - docker/publish:
+          tag: latest,${CIRCLE_TAG:1}
+          extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
