--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - image: circleci/golang:1.13
     steps:
       - checkout
-      - run: go install -ldflags "-X main.BuildID=`[ -z $CIRCLE_TAG ] && echo v1.0.0 || echo -n $CIRCLE_TAG`" github.com/honeycombio/honeyaws/cmd/...
+      - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
       - setup_remote_docker
       - run:
           name: apt_get_update
@@ -31,11 +31,11 @@ jobs:
       - run: mkdir -p ~/artifacts
       - run:
           name: build_deb
-          command: ./build-pkg.sh -v `[ -z "${CIRCLE_TAG}" ] && echo "1.0.0" || echo -n "${CIRCLE_TAG}" | sed 's/v//g'` -t deb && cp $GOPATH/bin/honeyaws_`[ -z "${CIRCLE_TAG}" ] && echo "1.0.0" || echo -n "${CIRCLE_TAG}" | sed 's/v//g'`_amd64.deb ~/artifacts
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}_amd64.deb ~/artifacts
       - run:
           name: build_rpm
-          command: CIRCLE_TAG=`[ -z "${CIRCLE_TAG}" ] && echo "1.0.0" || echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
-      - run: pkg-test/test.sh `[ -z "${CIRCLE_TAG}" ] && echo "1.0.0" || echo -n "${CIRCLE_TAG}" | sed 's/v//g'`
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
+      - run: pkg-test/test.sh `echo -n "${CIRCLE_TAG}" | sed 's/v//g'`
       - run: echo "finished builds" && find ~/artifacts -ls
       - persist_to_workspace:
           root: ~/
@@ -79,13 +79,18 @@ workflows:
       - build_packages:
           requires:
             - build
+          filters:
+            tags:
+              only: /^v[0-9].*/
+            branches:
+              ignore: /.*/
       - publish_github:
           context: Honeycomb Secrets for Public Repos
           requires:
             - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
       - publish_s3:
@@ -94,7 +99,7 @@ workflows:
             - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
       - docker/publish:
@@ -105,6 +110,6 @@ workflows:
             - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
