--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - image: circleci/golang:1.13
     steps:
       - checkout
-      - run: o install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
+      - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
       - setup_remote_docker
       - run:
           name: apt_get_update
@@ -31,11 +31,11 @@ jobs:
       - run: mkdir -p ~/artifacts
       - run:
           name: build_deb
-          command: ./build-pkg.sh -v `echo -n "${CIRCLE_TAG}" | sed 's/v//g'` -t deb && cp $GOPATH/bin/honeyaws_${CIRCLE_TAG}_amd64.deb ~/artifacts
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}_amd64.deb ~/artifacts
       - run:
           name: build_rpm
-          command: ./build-pkg.sh -v `echo -n "${CIRCLE_TAG}" | sed 's/v//g'` -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
-      - run: pkg-test/test.sh "${CIRCLE_TAG}"
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
+      - run: pkg-test/test.sh `echo -n "${CIRCLE_TAG}" | sed 's/v//g'`
       - run: echo "finished builds" && find ~/artifacts -ls
       - persist_to_workspace:
           root: ~/
@@ -81,25 +81,25 @@ workflows:
             - build
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
       - publish_github:
           context: Honeycomb Secrets for Public Repos
           requires:
-            - build
+            - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
       - publish_s3:
           context: Honeycomb Secrets for Public Repos
           requires:
-            - build
+            - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
       - docker/publish:
@@ -107,9 +107,9 @@ workflows:
           extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
           requires:
-            - build
+            - build_packages
           filters:
             tags:
-              only: /^v.*/
+              only: /^v[0-9].*/
             branches:
               ignore: /.*/
