--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,10 @@ workflows:
   version: 2
   build:
     jobs:
-      - build
+      - build:
+          filters:
+            tags:
+              only: /.*/
       - build_packages:
           requires:
             - build
