--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,25 +21,25 @@ commands:
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeyalb && go build -ldflags "-X main.BuildID=v1.4.0" \
+          cd cmd/honeyalb && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
           -o $GOPATH/bin/honeyalb-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeyelb && go build -ldflags "-X main.BuildID=v1.4.0" \
+          cd cmd/honeyelb && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
           -o $GOPATH/bin/honeyelb-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeycloudfront && go build -ldflags "-X main.BuildID=v1.4.0" \
+          cd cmd/honeycloudfront && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
           -o $GOPATH/bin/honeycloudfront-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeycloudtrail && go build -ldflags "-X main.BuildID=v1.4.0" \
+          cd cmd/honeycloudtrail && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
           -o $GOPATH/bin/honeycloudtrail-<< parameters.os >>-<< parameters.arch >> \
           .
 
@@ -56,7 +56,7 @@ jobs:
       - image: circleci/golang:1.13
     steps:
       - checkout
-      - run: go install -ldflags "-X main.BuildID=v1.4.0" github.com/honeycombio/honeyaws/cmd/...
+      - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
       - setup_remote_docker
       - run:
           name: apt_get_update
@@ -70,11 +70,11 @@ jobs:
       - run: mkdir -p ~/artifacts
       - run:
           name: build_deb
-          command: CIRCLE_TAG=`echo -n "v1.4.0" | sed 's/v//g'` && ./build-pkg.sh -v "1.4.0" -t deb && cp $GOPATH/bin/honeyaws_1.4.0_amd64.deb ~/artifacts
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws_${CIRCLE_TAG}_amd64.deb ~/artifacts
       - run:
           name: build_rpm
-          command: CIRCLE_TAG=`echo -n "v1.4.0" | sed 's/v//g'` && ./build-pkg.sh -v "1.4.0" -t rpm && cp $GOPATH/bin/honeyaws-1.4.0-1.x86_64.rpm ~/artifacts
-      - run: pkg-test/test.sh `echo -n "v1.4.0" | sed 's/v//g'`
+          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
+      - run: pkg-test/test.sh `echo -n "${CIRCLE_TAG}" | sed 's/v//g'`
       - go-build:
           os: linux
           arch: amd64
@@ -133,7 +133,9 @@ workflows:
             - build
           filters:
             tags:
-              only: /.*/
+              only: /^v[0-9].*/
+            branches:
+              ignore: /.*/
       - publish_github:
           context: Honeycomb Secrets for Public Repos
           requires:
@@ -149,7 +151,9 @@ workflows:
             - build_packages
           filters:
             tags:
-              only: /.*/
+              only: /^v[0-9].*/
+            branches:
+              ignore: /.*/
       - docker/publish:
           tag: latest,${CIRCLE_TAG:1}
           extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
