--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,25 +21,25 @@ commands:
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeyalb && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
+          cd cmd/honeyalb && go build -ldflags "-X main.BuildID=v1.4.0" \
           -o $GOPATH/bin/honeyalb-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeyelb && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
+          cd cmd/honeyelb && go build -ldflags "-X main.BuildID=v1.4.0" \
           -o $GOPATH/bin/honeyelb-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeycloudfront && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
+          cd cmd/honeycloudfront && go build -ldflags "-X main.BuildID=v1.4.0" \
           -o $GOPATH/bin/honeycloudfront-<< parameters.os >>-<< parameters.arch >> \
           .
       - run: |
           GOOS=<< parameters.os >> \
           GOARCH=<< parameters.arch >> \
-          cd cmd/honeycloudtrail && go build -ldflags "-X main.BuildID=${CIRCLE_TAG}" \
+          cd cmd/honeycloudtrail && go build -ldflags "-X main.BuildID=v1.4.0" \
           -o $GOPATH/bin/honeycloudtrail-<< parameters.os >>-<< parameters.arch >> \
           .
 
@@ -56,7 +56,7 @@ jobs:
       - image: circleci/golang:1.13
     steps:
       - checkout
-      - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
+      - run: go install -ldflags "-X main.BuildID=v1.4.0" github.com/honeycombio/honeyaws/cmd/...
       - setup_remote_docker
       - run:
           name: apt_get_update
@@ -70,11 +70,11 @@ jobs:
       - run: mkdir -p ~/artifacts
       - run:
           name: build_deb
-          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws_${CIRCLE_TAG}_amd64.deb ~/artifacts
+          command: CIRCLE_TAG=`echo -n "v1.4.0" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t deb && cp $GOPATH/bin/honeyaws_${CIRCLE_TAG}_amd64.deb ~/artifacts
       - run:
           name: build_rpm
-          command: CIRCLE_TAG=`echo -n "${CIRCLE_TAG}" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
-      - run: pkg-test/test.sh `echo -n "${CIRCLE_TAG}" | sed 's/v//g'`
+          command: CIRCLE_TAG=`echo -n "v1.4.0" | sed 's/v//g'` && ./build-pkg.sh -v "${CIRCLE_TAG}" -t rpm && cp $GOPATH/bin/honeyaws-${CIRCLE_TAG}-1.x86_64.rpm ~/artifacts
+      - run: pkg-test/test.sh `echo -n "v1.4.0" | sed 's/v//g'`
       - go-build:
           os: linux
           arch: amd64
@@ -118,7 +118,7 @@ jobs:
           aws-region: AWS_REGION
       - run:
           name: sync_s3_artifacts
-          command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/${CIRCLE_TAG}/
+          command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/v1.4.0/
 
 workflows:
   version: 2
@@ -134,8 +134,6 @@ workflows:
           filters:
             tags:
               only: /^v[0-9].*/
-            branches:
-              ignore: /.*/
       - publish_github:
           context: Honeycomb Secrets for Public Repos
           requires:
@@ -152,8 +150,6 @@ workflows:
           filters:
             tags:
               only: /^v[0-9].*/
-            branches:
-              ignore: /.*/
       - docker/publish:
           tag: latest,${CIRCLE_TAG:1}
           extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
