--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@0.1.13
-  docker: circleci/docker@1.3.0
 
 commands:
   go-build:
@@ -132,6 +131,27 @@ jobs:
           name: sync_s3_artifacts
           command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/${CIRCLE_TAG}/
 
+  publish_docker:
+    docker:
+      - image: circleci/golang:1.13
+    steps:
+      - checkout
+      # use specific docker version to get access to buildx:
+      # https://support.circleci.com/hc/en-us/articles/360058095471-How-To-Use-Docker-Buildx-in-Remote-Docker
+      - setup_remote_docker:
+          version: 19.03.14
+      - run:
+          name: "Build and publish multi-arch docker image"
+          command: |
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin;
+            docker buildx build \
+              --platform linux/amd64,linux/arm64,darwin/amd64 \
+              -t honeycombio/honeyaws:latest \
+              -t honeycombio/honeyaws:${CIRCLE_TAG} \
+              --push \
+              .
+
 workflows:
   version: 2
   build:
@@ -166,12 +186,10 @@ workflows:
               only: /^v[0-9].*/
             branches:
               ignore: /.*/
-      - docker/publish:
-          tag: latest,${CIRCLE_TAG:1}
-          extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
-          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+      - publish_docker:
+          context: Honeycomb Secrets for Public Repos
           requires:
-            - build_packages
+            - build
           filters:
             tags:
               only: /^v[0-9].*/
