--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,6 +185,17 @@ workflows:
               only: /^v[0-9].*/
             branches:
               ignore: /.*/
+      - docker/publish:
+          tag: latest,${CIRCLE_TAG:1}
+          extra_build_args: --build-arg BUILD_ID=${CIRCLE_TAG:1}
+          image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+          requires:
+            - build_packages
+          filters:
+            tags:
+              only: /^v[0-9].*/
+            branches:
+              ignore: /.*/
       - publish_docker:
           context: Honeycomb Secrets for Public Repos
           requires:
