--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,13 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.13
   docker: circleci/docker@1.3.0
 
+executors:
+  linuxgo:
+    docker:
+      - image: cimg/go:1.16
+        environment:
+          GO111MODULE: "on"
+
 commands:
   go-build:
     parameters:
@@ -57,15 +64,13 @@ commands:
 
 jobs:
   build:
-    docker:
-      - image: circleci/golang:1.13
+    executor: linuxgo
     steps:
       - checkout
       - run: go test --timeout 10s -v ./...
 
   build_packages:
-    docker:
-      - image: circleci/golang:1.13
+    executor: linuxgo
     steps:
       - checkout
       - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
@@ -133,8 +138,7 @@ jobs:
           command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/${CIRCLE_TAG}/
 
   publish_docker:
-    docker:
-      - image: circleci/golang:1.13
+    executor: linuxgo
     steps:
       - restore_cache:
           keys:
