--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,13 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.13
   docker: circleci/docker@1.3.0
 
+executors:
+  linuxgo:
+    docker:
+      - image: cimg/go:1.16
+        environment:
+          GO111MODULE: "on"
+
 commands:
   go-build:
     parameters:
@@ -57,15 +64,13 @@ commands:
 
 jobs:
   build:
-    docker:
-      - image: circleci/golang:1.13
+    executor: linuxgo
     steps:
       - checkout
       - run: go test --timeout 10s -v ./...
 
   build_packages:
-    docker:
-      - image: circleci/golang:1.13
+    executor: linuxgo
     steps:
       - checkout
       - run: go install -ldflags "-X main.BuildID=${CIRCLE_TAG}" github.com/honeycombio/honeyaws/cmd/...
@@ -132,6 +137,30 @@ jobs:
           name: sync_s3_artifacts
           command: aws s3 sync ~/artifacts s3://honeycomb-builds/honeycombio/honeyaws/${CIRCLE_TAG}/
 
+  build_docker:
+    docker:
+      - image: cimg/go:1.16
+    steps:
+      - run: go install github.com/google/ko@latest
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: build docker images and publish locally
+          command: ./build-docker.sh
+
+  publish_docker:
+    docker:
+      - image: cimg/go:1.16
+    steps:
+      - run: go install github.com/google/ko@latest
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: build docker images and publish to Docker Hub
+          environment:
+            KO_DOCKER_REPO: honeycombio
+          command: ./build-docker.sh
+
 workflows:
   version: 2
   build:
@@ -148,10 +177,17 @@ workflows:
               only: /^v[0-9].*/
             branches:
               ignore: /.*/
+      - build_docker:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /.*/
       - publish_github:
           context: Honeycomb Secrets for Public Repos
           requires:
             - build_packages
+            - build_docker
           filters:
             tags:
               only: /^v[0-9].*/
@@ -161,6 +197,7 @@ workflows:
           context: Honeycomb Secrets for Public Repos
           requires:
             - build_packages
+            - build_docker
           filters:
             tags:
               only: /^v[0-9].*/
@@ -172,8 +209,19 @@ workflows:
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
           requires:
             - build_packages
+            - build_docker
           filters:
             tags:
               only: /^v[0-9].*/
+            branches:
+              ignore: /.*/
+      - publish_docker:
+          context: Honeycomb Secrets for Public Repos
+          requires:
+            - build_packages
+            - build_docker
+          filters:
+            tags:
+              only: /^v.*/
             branches:
               ignore: /.*/
