--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,7 @@ jobs:
             KO_DOCKER_REPO: honeycombio
           command: |
             echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin;
-            ./build_docker.sh
+            ./build-docker.sh
 
 workflows:
   version: 2
